--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url('https://hips.hearstapps.com/edc.h-cdn.co/assets/15/36/1441304848-national-skyscraper-day-01.jpg');
+    background-image: url('image/body-bg\ \(1\).jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
