--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-image: url('image/body-bg\ \(1\).jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    backdrop-filter: blur(5px);
 }
 
 input,button {
