--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 body {
+    height: 100vh;
+    font-family: 'Poppins', sans-serif;
     background-image: url('image/body-bg\ \(1\).jpg');
     background-repeat: no-repeat;
     background-size: cover;
