--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
 body {
     height: 100vh;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Merriweather', serif;
     background-image: url('image/body-bg\ \(1\).jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    backdrop-filter: blur(5px);
 }
 
 input,button {
