--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
 body {
     height: 100vh;
+    width: 100%;
+    position: fixed;
     font-family: 'Merriweather', serif;
     background-image: url('image/body-bg\ \(1\).jpg');
     background-repeat: no-repeat;
